# util-linux

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  version.bzl
config/: BUILD.bazel
config/x86_64-linux-gnu/: config.h
lib/: BUILD.bazel
libblkid/: BUILD.bazel
libfdisk/: BUILD.bazel
liblastlog2/: BUILD.bazel
libmount/: BUILD.bazel
libsmartcols/: BUILD.bazel
libuuid/: BUILD.bazel
sys-utils/: BUILD.bazel
