config_setting(
    name = "x86_64-linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

# config_setting(
#     name = "aarch64-linux",
#     constraint_values = [
#         "@platforms//cpu:arm64",
#         "@platforms//os:linux",
#     ],
# )

cc_library(
    name = "config",
    hdrs = select(
        {
            ":x86_64-linux": ["x86_64-linux-gnu/config.h"],
        },
        no_match_error = "No pre-configured `config.h` available",
    ),
    defines = select(
        {
            ":x86_64-linux": [
                "_GNU_SOURCE",
                "HAVE_ASM_FCNTL_H=1",
                "HAVE_ASM_GENERIC_FCNTL_H=1",
                "HAVE_BYTESWAP_H=1",
                "HAVE_CLEARENV=1",
                "HAVE_CLOCK_GETTIME=1",
                "HAVE_CLOSE_RANGE=1",
                "HAVE_CPU_SET_T=1",
                "HAVE_CRYPT_H=1",
                "HAVE_DCGETTEXT=1",
                "HAVE_DECL_BLK_ZONE_REP_CAPACITY=1",
                "HAVE_DECL_CPU_ALLOC=1",
                "HAVE_DECL_PR_REP_CAPACITY=0",
                "HAVE_DECL__NL_TIME_WEEK_1STDAY=1",
                "HAVE_DIRFD=1",
                "HAVE_DLFCN_H=1",
                "HAVE_EACCESS=1",
                "HAVE_ENDIAN_H=1",
                "HAVE_ENUM_FSCONFIG_COMMAND=1",
                "HAVE_ENVIRON_DECL=1",
                "HAVE_ERR=1",
                "HAVE_ERRNO_H=1",
                "HAVE_ERRX=1",
                "HAVE_ERR_H=1",
                "HAVE_EXPLICIT_BZERO=1",
                "HAVE_FCNTL_H=1",
                "HAVE_FNMATCH=1",
                "HAVE_FSEEKO=1",
                "HAVE_FSTATAT=1",
                "HAVE_FSYNC=1",
                "HAVE_FUTIMENS=1",
                "HAVE_GETDOMAINNAME=1",
                "HAVE_GETDTABLESIZE=1",
                "HAVE_GETOPT_H=1",
                "HAVE_GETRANDOM=1",
                "HAVE_GETRLIMIT=1",
                "HAVE_GETSGNAM=1",
                "HAVE_GETTEXT=1",
                "HAVE_GETTTYNAM=1",
                "HAVE_GETUSERSHELL=1",
                "HAVE_INOTIFY_INIT=1",
                "HAVE_INOTIFY_INIT1=1",
                "HAVE_INTTYPES_H=1",
                "HAVE_IOPERM=1",
                "HAVE_IOPL=1",
                "HAVE_ISNAN=1",
                "HAVE_JRAND48=1",
                "HAVE_LANGINFO_ALTMON=1",
                "HAVE_LANGINFO_H=1",
                "HAVE_LANGINFO_NL_ABALTMON=1",
                "HAVE_LASTLOG_H=1",
                "HAVE_LCHOWN=1",
                "HAVE_LGETXATTR=1",
                "HAVE_LIBNCURSESW=1",
                "HAVE_LIBREADLINE=1",
                "HAVE_LIBTINFO=1",
                "HAVE_LIBUTIL=1",
                "HAVE_LINUX_BLKPG_H=1",
                "HAVE_LINUX_BLKZONED_H=1",
                "HAVE_LINUX_CAPABILITY_H=1",
                "HAVE_LINUX_CDROM_H=1",
                "HAVE_LINUX_FALLOC_H=1",
                "HAVE_LINUX_FD_H=1",
                "HAVE_LINUX_FIEMAP_H=1",
                "HAVE_LINUX_GSMMUX_H=1",
                "HAVE_LINUX_IF_ALG_H=1",
                "HAVE_LINUX_KCMP_H=1",
                "HAVE_LINUX_LANDLOCK_H=1",
                "HAVE_LINUX_MAJOR_H=1",
                "HAVE_LINUX_MOUNT_H=1",
                "HAVE_LINUX_NET_NAMESPACE_H=1",
                "HAVE_LINUX_NSFS_H=1",
                "HAVE_LINUX_PR_H=1",
                "HAVE_LINUX_SECUREBITS_H=1",
                "HAVE_LINUX_TIOCL_H=1",
                "HAVE_LINUX_VERSION_H=1",
                "HAVE_LINUX_WATCHDOG_H=1",
                "HAVE_LLISTXATTR=1",
                "HAVE_LOCALE_H=1",
                "HAVE_LOFF_T=1",
                "HAVE_MEMPCPY=1",
                "HAVE_MKOSTEMP=1",
                "HAVE_MNTENT_H=1",
                "HAVE_MOUNTFD_API=1",
                "HAVE_NANOSLEEP=1",
                "HAVE_NCURSESW_NCURSES_H=1",
                "HAVE_NCURSESW_TERM_H=1",
                "HAVE_NETINET_IN_H=1",
                "HAVE_NET_IF_H=1",
                "HAVE_NEWLOCALE=1",
                "HAVE_NTP_GETTIME=1",
                "HAVE_OPENAT=1",
                "HAVE_OPEN_MEMSTREAM=1",
                "HAVE_PATHS_H=1",
                "HAVE_PERSONALITY=1",
                "HAVE_POSIX_FADVISE=1",
                "HAVE_PRCTL=1",
                # "HAVE_PROGRAM_INVOCATION_SHORT_NAME=1", # not supported
                "HAVE_PTY=1",
                "HAVE_PTY_H=1",
                "HAVE_QSORT_R=1",
                "HAVE_REALLOCARRAY=1",
                "HAVE_REBOOT=1",
                "HAVE_RENAMEAT2=1",
                "HAVE_RESIZETERM=1",
                "HAVE_RPMATCH=1",
                "HAVE_SCANDIRAT=1",
                "HAVE_SCHED_SETSCHEDULER=1",
                "HAVE_SECURE_GETENV=1",
                "HAVE_SENDFILE=1",
                "HAVE_SETNS=1",
                "HAVE_SETRESGID=1",
                "HAVE_SETRESUID=1",
                "HAVE_SHADOW_H=1",
                "HAVE_SIGHANDLER_T=1",
                "HAVE_SIGQUEUE=1",
                "HAVE_SRANDOM=1",
                "HAVE_STATX=1",
                "HAVE_STDINT_H=1",
                "HAVE_STDIO_EXT_H=1",
                "HAVE_STDIO_H=1",
                "HAVE_STDLIB_H=1",
                "HAVE_STRINGS_H=1",
                "HAVE_STRING_H=1",
                "HAVE_STRNDUP=1",
                "HAVE_STRNLEN=1",
                "HAVE_STRSIGNAL_DECL=1",
                "HAVE_STRTOD_L=1",
                "HAVE_STRUCT_MOUNT_ATTR=1",
                "HAVE_STRUCT_STATX=1",
                "HAVE_STRUCT_STATX_STX_MNT_ID=1",
                "HAVE_STRUCT_STAT_ST_MTIM_TV_NSEC=1",
                "HAVE_STRUCT_TERMIOS_C_LINE=1",
                "HAVE_STRUCT_TM_TM_ZONE=1",
                "HAVE_SWAPOFF=1",
                "HAVE_SWAPON=1",
                "HAVE_SYSCONF=1",
                "HAVE_SYSINFO=1",
                "HAVE_SYS_FILE_H=1",
                "HAVE_SYS_IOCTL_H=1",
                "HAVE_SYS_IO_H=1",
                "HAVE_SYS_MOUNT_H=1",
                "HAVE_SYS_PARAM_H=1",
                "HAVE_SYS_PRCTL_H=1",
                "HAVE_SYS_RESOURCE_H=1",
                "HAVE_SYS_SENDFILE_H=1",
                "HAVE_SYS_SIGNALFD_H=1",
                "HAVE_SYS_SOCKET_H=1",
                "HAVE_SYS_STATFS_H=1",
                "HAVE_SYS_STAT_H=1",
                "HAVE_SYS_SWAP_H=1",
                "HAVE_SYS_SYSCALL_H=1",
                "HAVE_SYS_SYSMACROS_H=1",
                "HAVE_SYS_TIMEX_H=1",
                "HAVE_SYS_TIME_H=1",
                "HAVE_SYS_TTYDEFAULTS_H=1",
                "HAVE_SYS_TYPES_H=1",
                "HAVE_SYS_UN_H=1",
                "HAVE_SYS_VFS_H=1",
                "HAVE_SYS_XATTR_H=1",
                "HAVE_TIMEGM=1",
                "HAVE_TIMER_CREATE=1",
                "HAVE_TLS=1",
                "HAVE_TM_GMTOFF=1",
                "HAVE_TM_ZONE=1",
                "HAVE_UNISTD_H=1",
                "HAVE_UNLINKAT=1",
                "HAVE_UNSHARE=1",
                "HAVE_UPDWTMPX=1",
                "HAVE_USELOCALE=1",
                "HAVE_USE_DEFAULT_COLORS=1",
                "HAVE_USLEEP=1",
                "HAVE_UTIMENSAT=1",
                "HAVE_UTMPX_H=1",
                "HAVE_UTMP_H=1",
                "HAVE_VWARNX=1",
                "HAVE_WARN=1",
                "HAVE_WARNX=1",
                "HAVE_WCHAR_H=1",
                "HAVE_WIDECHAR=1",
                "HAVE___FPENDING=1",
                "HAVE___FPURGE=1",
                "HAVE___PROGNAME=1",
                "LIBBLKID_VERSION=\\\"2.40.1\\\"",
                "LIBFDISK_VERSION=\\\"2.40.1\\\"",
                "LIBBLKID_DATE=\\\"__REDACTED__\\\"",
                "FS_SEARCH_PATH=\\\"/sbin:/sbin/fs.d:/sbin/fs\\\"",
                "_PATH_SYSCONFSTATICDIR=\\\"/etc/\\\"",
                "_PATH_RUNSTATEDIR=\\\"/run\\\"",
                "_PATH_LOCALSTATEDIR=\\\"/var\\\"",
                "CONFIG_ADJTIME_PATH=\\\"/etc/adjtime\\\"",
                "ADJTIME_PATH=\\\"/etc/adjtime\\\"",
            ],
        },
        no_match_error = "Unsupported architecture.",
    ),
    includes = select(
        {
            ":x86_64-linux": ["x86_64-linux-gnu"],
        },
        no_match_error = "Unsupported architecture.",
    ),
    visibility = ["//:__subpackages__"],
)
