load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

expand_template(
    name = "generate_header",
    out = "libmount.h",
    substitutions = {
        "@LIBMOUNT_VERSION@": "2.40.1",
        "@LIBMOUNT_MAJOR_VERSION@": "2",
        "@LIBMOUNT_MINOR_VERSION@": "40",
        "@LIBMOUNT_PATCH_VERSION@": "1",
    },
    template = "src/libmount.h.in",
)

cc_library(
    name = "headers",
    hdrs = [":generate_header"],
    includes = ["."],
)

cc_library(
    name = "libmount",
    srcs = [
        "src/cache.c",
        "src/fs.c",
        "src/init.c",
        "src/iter.c",
        "src/lock.c",
        "src/mountP.h",
        "src/optmap.c",
        "src/optstr.c",
        "src/tab.c",
        "src/tab_diff.c",
        "src/tab_parse.c",
        "src/tab_update.c",
        "src/test.c",
        "src/utils.c",
        "src/version.c",
        "//lib:monotonic_c",
    ] + select(
        {
            "@platforms//os:linux": [
                "src/context.c",
                "src/context_mount.c",
                "src/context_umount.c",
                "src/hook_idmap.c",
                "src/hook_loopdev.c",
                "src/hook_mkdir.c",
                "src/hook_mount.c",
                "src/hook_mount_legacy.c",
                "src/hook_owner.c",
                "src/hook_selinux.c",
                "src/hook_subdir.c",
                "src/hook_veritydev.c",
                "src/hooks.c",
                "src/monitor.c",
                "src/optlist.c",
            ],
        },
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":headers",
        "//:includes",
        "//config",
        "//libblkid",
    ],
)
